--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = [
 dependencies = [
     "warcio>=1.7.4",
     "httpx>=0.24.1",
+    "python-dateutil>=2.8.2",
+    "tqdm>=4.66.1",
+    "requests>=2.31.0",
+    "toolz>=0.12.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
