--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,22 +14,13 @@ dependencies = [
     "toolz>=0.12.0",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.13.0"
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ipython>=8.12.2",
-    "setuptools>=68.1.2",
     "ruff>=0.0.285",
 ]
-
-[tool.hatch.metadata]
-allow-direct-references = true
 
 [tool.ruff]
 line-length = 140
